--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,17 +7,11 @@ trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: windows-2019
 strategy:
   matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
+    Python310:
+      python.version: '3.10'
 
 steps:
 - task: UsePythonVersion@0
