Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,4 +32,5 @@ steps:
     pip install pytest pytest-azurepipelines
     pytest tests/test_1.py
   displayName: pytest
+  workingDirectory: $(Pipeline.Workspace)
 
